source/grammar/tests/invalid/statements/switch.qasm
switch () {}
switch (i) { x $0 }
switch (i) { case {} }
switch (i) { case 1,, {} }
switch (i) { default 0 {} }
switch (i) { default, default {} }
